--- a/iklan.html
+++ b/iklan.html
@@ -1,17 +1,17 @@
-<div style="
-  width: 100%;
-  max-width: 728px;
-  margin: 40px auto 0 auto;
-  padding: 10px;
-  text-align: center;
-  background: #f1f1f1;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  font-family: sans-serif;
-  font-size: 14px;
-  color: #333;">
-  <strong>Iklan Sponsor</strong><br />
-  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #9d4242;">
-    🎯 Dapatkan penghasilan tambahan dari Hive - Klik di sini!
+<div style="max-width: 728px; margin: 40px auto; padding: 12px 16px; font-family: Arial, sans-serif; font-size: 14px; background-color: #ffffff; border: 1px solid #e0e0e0; border-radius: 6px;">
+  <div style="font-size: 12px; color: #888888; margin-bottom: 4px;">
+    Sponsored · <span style="color: #0066cc;">Ad</span>
+  </div>
+  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #1a0dab; font-weight: bold; font-size: 15px;">
+    Dapatkan Penghasilan Tambahan dari Hive Sekarang!
   </a>
+  <div style="color: #ffa500; margin: 4px 0;">
+    ★ ★ ★ ★ ★ <span style="color: #999; font-size: 12px;">(4.9/5)</span>
+  </div>
+  <div style="color: #4d5156;">
+    Peluang baru untuk hasilkan token digital dari aktivitas harianmu. Klik untuk mulai!
+  </div>
+  <div style="margin-top: 8px;">
+    <a href="https://example.com" target="_blank" style="color: #0066cc; font-size: 12px;">www.example.com</a>
+  </div>
 </div>
