--- a/iklan.html
+++ b/iklan.html
@@ -1,17 +1,30 @@
-<div style="max-width: 728px; margin: 40px auto; padding: 12px 16px; font-family: Arial, sans-serif; font-size: 14px; background-color: #ffffff; border: 1px solid #e0e0e0; border-radius: 6px;">
-  <div style="font-size: 12px; color: #888888; margin-bottom: 4px;">
-    Sponsored · <span style="color: #0066cc;">Ad</span>
+<div style="max-width: 728px; margin: 40px auto; padding: 16px; font-family: Arial, sans-serif; font-size: 14px; background-color: #ffe6cc; border: 1px solid #f1c27d; border-radius: 8px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);">
+  <div style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; margin-bottom: 8px;">
+    <span style="color: #888888;">Sponsored</span>
+    <span style="background:#ffeb3b; color:#856404; padding: 3px 8px; border-radius: 4px; font-size: 11px; font-weight: bold;">
+      Ad
+    </span>
   </div>
-  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #1a0dab; font-weight: bold; font-size: 15px;">
+
+  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #1a0dab; font-weight: bold; font-size: 16px; display: block; margin-bottom: 10px;">
     Dapatkan Penghasilan Tambahan dari Hive Sekarang!
   </a>
-  <div style="color: #ffa500; margin: 4px 0;">
-    ★ ★ ★ ★ ★ <span style="color: #999; font-size: 12px;">(4.9/5)</span>
+
+  <div style="color: #ff9800; margin-bottom: 10px;">
+    <span style="font-size: 18px;">★ ★ ★ ★ ★</span> <span style="color: #999; font-size: 14px;">(4.9/5)</span>
   </div>
-  <div style="color: #4d5156;">
-    Peluang baru untuk hasilkan token digital dari aktivitas harianmu. Klik untuk mulai!
+
+  <div style="color: #4d5156; font-size: 13px; line-height: 1.5;">
+    Peluang baru untuk hasilkan token digital dari aktivitas harianmu. Bergabunglah sekarang dan mulailah menghasilkan dengan mudah!
   </div>
-  <div style="margin-top: 8px;">
-    <a href="https://example.com" target="_blank" style="color: #0066cc; font-size: 12px;">www.example.com</a>
+
+  <div style="margin-top: 12px; text-align: center;">
+    <a href="https://example.com" target="_blank" style="background-color: #ff9800; color: white; font-size: 14px; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold;">
+      Mulai Sekarang
+    </a>
+  </div>
+
+  <div style="margin-top: 10px; text-align: center;">
+    <a href="https://example.com" target="_blank" style="color: #1a0dab; font-size: 12px;">www.example.com</a>
   </div>
 </div>
