--- a/iklan.html
+++ b/iklan.html
@@ -1,38 +1,37 @@
-<div style="max-width: 728px; margin: 40px auto; padding: 16px; font-family: Arial, sans-serif; font-size: 14px; background-color: #ffeb3b; border: 2px solid #f57c00; border-radius: 8px; box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);">
+<div style="max-width: 728px; margin: 40px auto; padding: 16px; font-family: Arial, sans-serif; font-size: 14px; background-color: #ffffff; border: 1px solid #e0e0e0; border-radius: 8px; box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);">
   <div style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; margin-bottom: 8px;">
     <span style="color: #888888;">Sponsored</span>
-    <span style="background:#ff9800; color:#856404; padding: 4px 10px; border-radius: 4px; font-size: 12px; font-weight: bold;">
+    <span style="background:#f1f1f1; color:#555555; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: bold;">
       Ad
     </span>
   </div>
 
-  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #d32f2f; font-weight: bold; font-size: 18px; display: block; margin-bottom: 12px;">
+  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #1a0dab; font-weight: bold; font-size: 16px; display: block; margin-bottom: 12px;">
     Dapatkan Penghasilan Tambahan dari Hive Sekarang!
   </a>
 
-  <div style="color: #ff5722; margin-bottom: 12px;">
-    <span style="font-size: 24px;">★ ★ ★ ★ ★</span> <span style="color: #999; font-size: 14px;">(4.9/5)</span>
+  <div style="color: #ff9800; margin-bottom: 10px;">
+    ★ ★ ★ ★ ★ <span style="color: #999; font-size: 12px;">(4.9/5)</span>
   </div>
 
-  <div style="color: #4d5156; font-size: 15px; line-height: 1.6;">
-    Peluang baru untuk hasilkan token digital dari aktivitas harianmu. Bergabung sekarang dan dapatkan keuntungan dengan mudah setiap hari!
+  <div style="color: #333333; font-size: 13px; line-height: 1.5;">
+    Peluang baru untuk hasilkan token digital dari aktivitas harianmu. Bergabunglah sekarang untuk mulai menghasilkan dengan mudah.
   </div>
 
   <div style="margin-top: 12px; text-align: center;">
-    <a href="https://example.com" target="_blank" style="background-color: #ff5722; color: white; font-size: 16px; padding: 15px 30px; border-radius: 8px; text-decoration: none; font-weight: bold; transition: background-color 0.3s ease;">
+    <a href="https://example.com" target="_blank" style="background-color: #1a0dab; color: white; font-size: 14px; padding: 12px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; transition: background-color 0.3s ease;">
       Mulai Sekarang
     </a>
   </div>
 
   <div style="margin-top: 10px; text-align: center;">
-    <a href="https://example.com" target="_blank" style="color: #d32f2f; font-size: 13px; text-decoration: none;">www.example.com</a>
+    <a href="https://example.com" target="_blank" style="color: #1a0dab; font-size: 12px;">www.example.com</a>
   </div>
 </div>
 
 <!-- Hover Effect for Button -->
 <style>
   a:hover {
-    background-color: #e64a19; /* Ganti warna tombol saat hover */
+    background-color: #003366; /* Ganti warna tombol saat hover */
   }
 </style>
-
