--- a/iklan.html
+++ b/iklan.html
@@ -1,17 +1,37 @@
 <div style="
   width: 100%;
   max-width: 728px;
-  margin: 40px auto 0 auto;
-  padding: 10px;
+  margin: 40px auto;
+  padding: 16px;
   text-align: center;
-  background: #f1f1f1;
+  background: #ffffff;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 8px;
   font-family: sans-serif;
   font-size: 14px;
-  color: #333;">
-  <strong>Iklan Sponsor</strong><br />
-  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #9d4242;">
+  color: #333;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+">
+  <div style="margin-bottom: 8px; font-size: 12px; color: #888;">
+    <strong>Sponsored</strong>
+  </div>
+
+  <a href="https://example.com" target="_blank" style="text-decoration: none; color: #1a73e8; font-weight: bold; font-size: 16px; display: block; margin-bottom: 12px;">
     🎯 Dapatkan penghasilan tambahan dari Hive - Klik di sini!
   </a>
+
+  <div style="color: #ff9800; margin: 10px 0;">
+    ★ ★ ★ ★ ★ <span style="color: #888; font-size: 12px;">(4.9/5)</span>
+  </div>
+
+  <a href="https://example.com" target="_blank" style="text-decoration: none; background-color: #1a73e8; color: white; padding: 10px 20px; border-radius: 5px; font-weight: bold; font-size: 14px; display: inline-block; margin-top: 10px; transition: background-color 0.3s ease;">
+    Mulai Sekarang
+  </a>
 </div>
+
+<!-- Hover Effect for Button -->
+<style>
+  a:hover {
+    background-color: #0c56b0; /* Ganti warna tombol saat hover */
+  }
+</style>
